--- a/EFCorePlusSQLiteUpdateIssue.csproj
+++ b/EFCorePlusSQLiteUpdateIssue.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="2.2.4" />
-    <PackageReference Include="z.entityframework.plus.efcore" Version="2.0.0" />
+    <PackageReference Include="Dapper.Common" Version="2.0.4" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="3.0.0" />
+    <PackageReference Include="z.entityframework.plus.efcore" Version="3.0.11" />
   </ItemGroup>
 
 </Project>
